<resources>
    <string name="app_name">ZkillA</string>
    <string name="app_title">Zkillboard on Android</string>

    <string name="app_description_connecting">Connecting to ZKillboard...</string>
    <string name="app_description_connected">Connected to %1$s</string>
    <string name="app_description_disconnected">Disconnected</string>
    <string name="app_description_unavailable">Not available with your current settings</string>

    <string name="main_action_settings">Settings</string>
    <string name="main_action_resume">Resume</string>
    <string name="main_action_pause">Pause</string>

    <string name="row_kill_character">%1$s - %2$s</string>
    <string name="row_kill_location">%2$s - %1$s</string>
    <string name="row_kill_isk">%1$s / %2$s ISK</string>
    <string name="row_kill_security">%1s</string>

    <string name="settings_network_title">Don\'t use mobile networks</string>
    <string name="settings_network_summary">Use only connected networks to prevent costly mobile usage. Disable at your own risks.</string>
    <string name="settings_battery_title">Don\'t run when on battery</string>
    <string name="settings_battery_summary">Prevent running when on battery. Disable to view your battery being drained quickly.</string>
    <string name="settings_portraits_title">Don\'t show portraits</string>
    <string name="settings_portraits_summary">Don\'t display portraits with kill views. This allows for less device resource consumption.</string>

</resources>
