<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.devfleet.zkillboard.zkilla.activity.main.MainActivity">

    <item
        android:id="@+id/main_action_pause"
        android:orderInCategory="100"
        android:title="@string/main_action_pause"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_action_resume"
        android:orderInCategory="100"
        android:title="@string/main_action_resume"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_action_settings"
        android:orderInCategory="100"
        android:title="@string/main_action_settings"
        app:showAsAction="never"/>
</menu>
